; ModuleID = '/home/carl/AnghaBench/postgres/contrib/auto_explain/extr_auto_explain.c_explain_ExecutorFinish.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/auto_explain/extr_auto_explain.c_explain_ExecutorFinish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nesting_level = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @explain_ExecutorFinish to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @explain_ExecutorFinish(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @nesting_level, align 4
  %4 = add nsw i32 %3, 1
  store i32 %4, i32* @nesting_level, align 4
  %5 = call i32 (...) @PG_TRY()
  br i1 true, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @prev_ExecutorFinish(i32* %7)
  br label %12

9:                                                ; preds = %1
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @standard_ExecutorFinish(i32* %10)
  br label %12

12:                                               ; preds = %9, %6
  %13 = call i32 (...) @PG_FINALLY()
  %14 = load i32, i32* @nesting_level, align 4
  %15 = add nsw i32 %14, -1
  store i32 %15, i32* @nesting_level, align 4
  %16 = call i32 (...) @PG_END_TRY()
  ret void
}

declare dso_local i32 @PG_TRY(...) #1

declare dso_local i32 @prev_ExecutorFinish(i32*) #1

declare dso_local i32 @standard_ExecutorFinish(i32*) #1

declare dso_local i32 @PG_FINALLY(...) #1

declare dso_local i32 @PG_END_TRY(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
